apps/devops-app/base/policies/bindings/enforce-image-pull-secrets-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: enforce-image-pull-secrets-binding
spec:
  policyName: enforce-image-pull-secrets
  matchResources:
    namespaceSelector:
      matchLabels:
        "kubernetes.io/metadata.name": devops-app
  validationActions:
    - Deny
