apps/devops-app/base/policies/bindings/enforce-resource-labels-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: enforce-resource-labels-binding
spec:
  policyName: enforce-resource-labels
  matchResources:
    namespaceSelector:
      matchLabels:
        "kubernetes.io/metadata.name": devops-app
  validationActions:
    - Deny
