apps/devops-app/base/policies/bindings/validate-service-target-port-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: validate-service-target-port-binding
spec:
  policyName: validate-service-target-port
  matchResources:
    namespaceSelector:
      matchLabels:
        "kubernetes.io/metadata.name": devops-app
  validationActions:
    - Deny
