apps/devops-app/base/policies/bindings/warn-on-latest-tag-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: warn-on-latest-tag-binding
spec:
  policyName: warn-on-latest-tag
  matchResources:
    namespaceSelector:
      matchLabels:
        "kubernetes.io/metadata.name": devops-app
  validationActions:
    - Warn
